--- a/AppliCarnet/nbproject/private/private.properties
+++ b/AppliCarnet/nbproject/private/private.properties
@@ -1,5 +1,7 @@
 deploy.ant.properties.file=/home/vivi/.netbeans/8.0.2/tomcat70.properties
 j2ee.server.home=/home/vivi/CCI/Serveur/apache-tomcat-7.0.57
 j2ee.server.instance=tomcat70:home=/home/vivi/CCI/Serveur/apache-tomcat-7.0.57
+javac.debug=true
+javadoc.preview=true
 selected.browser=default
 user.properties.file=/home/vivi/.netbeans/8.0.2/build.properties
