ajout distance + debut match

--- a/AppliCarnet/nbproject/private/private.properties
+++ b/AppliCarnet/nbproject/private/private.properties
@@ -3,5 +3,5 @@ j2ee.server.home=/home/vivi/Serveur/apache-tomcat-7.0.59
 j2ee.server.instance=tomcat70:home=/home/vivi/Serveur/apache-tomcat-7.0.59
 javac.debug=true
 javadoc.preview=true
-selected.browser=default
+selected.browser=SL[/Browsers/FirefoxBrowser
 user.properties.file=/home/vivi/.netbeans/8.0.2/build.properties
