--- a/AppliCarnet/nbproject/project.properties
+++ b/AppliCarnet/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.gson-2.3.1.jar=../lib/gson-2.3.1.jar
 file.reference.javax.mail.jar=../javax.mail.jar
 file.reference.mysql-connector-java-5.1.23-bin.jar=web/WEB-INF/lib/mysql-connector-java-5.1.23-bin.jar
 file.reference.ojdbc6_1_.jar=web/WEB-INF/lib/ojdbc6(1).jar
@@ -42,8 +43,8 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.ojdbc6_1_.jar}:\
     ${file.reference.mysql-connector-java-5.1.23-bin.jar}:\
-    ${libs.javaMail.classpath}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.gson-2.3.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
